GenerarOrden vista
