# backend/swagger_output.json
@@ -692,6 +692,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         },
         "security": [
@@ -791,32 +794,6 @@
             "BearerAuth": []
           }
         ]
-      }
-    },
-    "/ordenes/getProductosOrden/{id}": {
-      "get": {
-        "tags": [
-          "Órdenes"
-        ],
-        "summary": "Obtiene los productos de una orden",
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "description": "ID de la orden"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
       }
     },
     "/panaderias/": {
@@ -1126,37 +1103,40 @@
           "type": "number",
           "example": 1
         },
-        "fechaEntrega": {
+        "fecha": {
           "type": "string",
-          "example": "2024-06-22"
-        },
-        "descripcion": {
-          "type": "string",
-          "example": "Descripción de la orden"
+          "example": "2024-06-18"
         },
         "estado": {
           "type": "string",
-          "example": "LISTO PARA RECOGER"
+          "example": "PENDIENTE"
         },
         "importe": {
           "type": "number",
           "example": 9.99
         },
-        "panadero": {
-          "type": "number",
-          "example": 1
-        },
-        "cliente": {
+        "clienteId": {
           "type": "number",
           "example": 2
         },
-        "productos": {
+        "pedidos": {
           "type": "array",
-          "example": [
-            1
-          ],
           "items": {
-            "type": "number"
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "number",
+                "example": 2
+              },
+              "productoId": {
+                "type": "number",
+                "example": 2
+              },
+              "cantidad": {
+                "type": "number",
+                "example": 3
+              }
+            }
           }
         }
       }
@@ -1171,6 +1151,23 @@
         "nombre": {
           "type": "string",
           "example": "Panadería Ejemplo"
+        }
+      }
+    },
+    "Pedido": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "productoId": {
+          "type": "number",
+          "example": 1
+        },
+        "cantidad": {
+          "type": "number",
+          "example": 2
         }
       }
     }
